--- a/workspace/index.html
+++ b/workspace/index.html
@@ -29,6 +29,13 @@
                 <p class="content__title--subtitle">Tout pour savoir faire de belles pages web</span>
             </div>
             <div class="content__card">
+                <div class="content__card--circle">
+                    <img src="../assets/quick-start.svg" class="content__card--icone" alt="icone_flag">
+                </div>
+                <div class="content__card--text">
+                    <h4 class="content__card--title">Commencer avec HTML et CSS</h4>
+                    <p class="content__card--description">Les outils et les tutoriels pour s'y mettre</p>
+                </div>
 
 
             </div>
