--- a/workspace/index.html
+++ b/workspace/index.html
@@ -17,7 +17,10 @@
         </div>
 
         <div class="menu__container">
-            <img src="../assets/avatar.jpg" alt="avatar" class="menu__avatar">
+            <div class="menu__avatar">
+                <img src="../assets/avatar.jpg" alt="avatar" class="menu__avatar--img">
+                <div class="menu__avatar--bubble">2</div>
+            </div>
             <div class="menu__name">Marie Thompson</div>
         </div>
     </div>
@@ -28,16 +31,23 @@
                 <h1 class="content__title--princ">Ressources HTML et CSS</h1>
                 <p class="content__title--subtitle">Tout pour savoir faire de belles pages web</span>
             </div>
-            <div class="content__card">
-                <div class="content__card--circle">
-                    <img src="../assets/quick-start.svg" class="content__card--icone" alt="icone_flag">
+            <div class="card">
+                <div class="card__circle">
+                    <img src="../assets/quick-start.svg" class="card__icone" alt="icone_flag">
                 </div>
-                <div class="content__card--text">
-                    <h4 class="content__card--title">Commencer avec HTML et CSS</h4>
-                    <p class="content__card--description">Les outils et les tutoriels pour s'y mettre</p>
+                <div class="card__text">
+                    <h4 class="card__title">Commencer avec HTML et CSS</h4>
+                    <p class="card__description">Les outils et les tutoriels pour s'y mettre</p>
                 </div>
-
-
+            </div>
+            <div class="card">
+                <div class="card__circle--red">
+                    <img src="../assets/responsive.svg" class="card__icone" alt="icone_telephone">
+                </div>
+                <div class="card__text">
+                    <h4 class="card__title">Gérer le Responsive</h4>
+                    <p class="card__description">De la théorie à la pratique</p>
+                </div>
             </div>
         </div>
 
