--- a/workspace/index.html
+++ b/workspace/index.html
@@ -10,13 +10,13 @@
     <title>Mes Ressources Documentaires</title>
 </head>
 <body>
-    <div class="header__container">
+    <div class="header">
         <div class="header__title">
-                <img src="../assets/logo.svg" alt="logo_principal" class="header__logo">
-                <h2>Mes Ressources Documentaire</h2>
+            <img src="../assets/logo.svg" alt="logo_principal" class="header__logo">
+            <h2>Mes Ressources Documentaire</h2>
         </div>
 
-        <div class="menu__container">
+        <div class="menu">
             <div class="menu__avatar">
                 <img src="../assets/avatar.jpg" alt="avatar" class="menu__avatar--img">
 
@@ -24,9 +24,9 @@
             <div class="menu__name">Marie Thompson</div>
         </div>
     </div>
-    <div class="background__container">
+    <div class="background">
 
-        <div class="content__container">
+        <div class="content">
             <div class="content__title">
                 <h1 class="content__title--princ">Ressources HTML et CSS</h1>
                 <p class="content__title--subtitle">Tout pour savoir faire de belles pages web</span>
